# ModuleDatastruct-2.0

./: README.md  custom_queue.py  linked_list.py  main.py  pyproject.toml
tests/: test_custom_queue.py  test_linked_list.py  test_main.py
