[tool.poetry]
name = "moduledatastruct"
version = "0.1.0"
description = ""
authors = ["GoodOleNothing <alexgog77777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
